# aiframework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: cmake-single-platform.yml
mycblastest/: CMakeLists.txt  my_blas_test.cpp  my_blas_test.hpp  test  test.cpp
spam_module/: main.py  my_class_py_type.cpp  my_class_py_type.h  my_py_module.cpp  setup.py
src/: CMakeLists.txt  array.h  main.c  ops_tensor.c  ops_tensor.h  point_test.h  py_module.c  tensor.c  tensor.h
tests/: CMakeLists.txt  test_test.cpp
